--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,15 @@
   background-color: #f3f2ef;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 .app__body {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 35px;
+  max-width: 1200px;
 }
+
+/* 225 492 291 */
