--- a/src/HeaderOption.css
+++ b/src/HeaderOption.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-right: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
   color: gray;
   cursor: pointer;
 }
