--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -21,6 +21,7 @@
   border-top-right-radius: 10px;
   background-color: white;
   padding-bottom: 10px;
+  width: 225px;
 }
 
 .sidebar__top > img {
