--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,9 @@
 
 .app__body {
   display: flex;
-  margin-left: auto;
-  margin-right: auto;
+
   margin-top: 35px;
-  max-width: 1200px;
+  padding: 0 30px;
 }
 
 /* 225 492 291 */
